--- a/Wildlife.html
+++ b/Wildlife.html
@@ -20,111 +20,73 @@ Creative Caputures by Cluadia Griswold 2020-->
 <hr>
 <center><h2>Wildlife</h2></center>
 <div class="row">
+
+
+
 <div class="column">
 <img src="Images/Wildlife/DSC_0589.jpg" class="height"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_1189.jpg" class="height"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_4090.jpg" class="height"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7620.nef.jpg" class="height"><br>
-<p>
 </div>
-
 <div class="column">
-<img src="Images/Wildlife/DSC_8910.jpg" class="height"><br>
-<p>
+<img src="Images/Wildlife/" class="height"><br>
 </div>
-
 <div class="column">
-<img src="Images/Wildlife/DSC_1041.jpg" class="length"><br>
-<p>
+<img src="Images/Wildlife/" class="length"><br>
 </div>
-
 <div class="column">
-<img src="Images/Wildlife/DSC_1793.jpg" class="length"><br>
-<p>
+<img src="Images/Wildlife/" class="length"><br>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_3211.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_3941.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_4404.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_4588.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_4704.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_5001.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7252.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7418.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7530.nef.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7676.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_7841.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_8490.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_8995.nef.jpg" class="length"><br>
-<p>
 </div>
-
 <div class="column">
 <img src="Images/Wildlife/DSC_9327.jpg" class="length"><br>
-<p>
-</div>
 </div>
 
+</div>
 </body>
 </html>
