--- a/Abstract.html
+++ b/Abstract.html
@@ -21,15 +21,19 @@ Creative Caputures by Cluadia Griswold 2020-->
 <center><h2>Abstract</h2></center>
 <div class="row">
 
-<div class="column">
+<!--1 Abstract--><div class="column">
 <img src="Images/Abstract/DSC_5291.jpg" class="height"><br>
 </div>
-<div class="column">
+<!--2 Abstract--><div class="column">
 <img src="Images/Abstract/DSC_6212.jpg" class="height"><br>
 </div>
-<div class="column">
+<!--3 Abstract--><div class="column">
 <img src="Images/Abstract/DSC_5829.jpg" class="length"><br>
 </div>
+
+
+
+
 
 
 </div>
