--- a/Portraits.html
+++ b/Portraits.html
@@ -1,12 +1,12 @@
 <html>
 <head>
-<!--This code is property of Kaitlin Griswold March 2023
+<!--This code is property of Kaitlin Griswold May 2023
 Creative Caputures by Cluadia Griswold 2020-->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
 <link rel="icon" type="image/x-icon" href="Images/Captivating Creative Captures.png">
 <link rel="shortcut icon" type="image/x-icon" href="Images/Captivating Creative Captures.png">
-<title>Wildlife-Captivating Creative Captures by Claudia</title>
+<title>Portraits-Captivating Creative Captures by Claudia</title>
 <script src="Main.js"></script>
 <link rel="stylesheet" href="Main.css">
 <link rel="stylesheet" href="Image.css"
