--- a/Portraits.html
+++ b/Portraits.html
@@ -20,77 +20,77 @@ Creative Caputures by Cluadia Griswold 2020-->
 <hr>
 <center><h2>Wildlife</h2></center>
 <div class="row">
-<!--1 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0589.jpg" class="height"><br>
+<!--1 --><div class="column">
+<img src="Images/" class="height"><br>
 </div>
 <!--2 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_1189.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--3 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4090.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--4 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7620.nef.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--5 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_9866-2.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--6 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_9919.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--7 Wildlife--><div class="column">
-<img src="Images/Wildlife/_DSC1474.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--8 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_3211.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--9 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_3941.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--10 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4404.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--11 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4588.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--12 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4704.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--13 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_5001.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--14 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7252.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--15 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7418.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--16 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7530.nef.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--17 Wildlife--><div class="column">
 <img src="Images/Wildlife/DSC_7676.jpg" class="length"><br>
 </div>
 <!--18 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7841.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--19 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_8490.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--20 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_8995.nef.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--21 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_9327.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--22 Wildlife--><div class="column">
-<img src="Images/Wildlife/_DSC1474.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--23 Wildlife--><div class="column">
-<img src="Images/Wildlife/173435470_208094234453813_8606837627614520475_n.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--24 Wildlife--><div class="column">
-<img src="Images/Wildlife/173910592_208093797787190_8515349054458144030_n.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--25 Wildlife--><div class="column">
 <img src="Images/Wildlife/174125786_208093801120523_9080374465860720338_n.jpg" class="height"><br>
