--- a/Portraits.html
+++ b/Portraits.html
@@ -69,7 +69,7 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/" class="length"><br>
 </div>
 <!--17 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7676.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--18 Wildlife--><div class="column">
 <img src="Images/" class="length"><br>
@@ -93,13 +93,13 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/" class="height"><br>
 </div>
 <!--25 Wildlife--><div class="column">
-<img src="Images/Wildlife/174125786_208093801120523_9080374465860720338_n.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--26 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0062.jpg" class="height"><br>
+<img src="Images/" class="height"><br>
 </div>
 <!--27 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0130-2.jpg" class="length"><br>
+<img src="Images/" class="length"><br>
 </div>
 <!--28 Wildlife--><div class="column">
 <img src="Images/Wildlife/DSC_0208.jpg" class="length"><br>
