--- a/Portraits.html
+++ b/Portraits.html
@@ -18,145 +18,109 @@ Creative Caputures by Cluadia Griswold 2020-->
 <a href="index.html"><button class="backbutton">⌂ Home</button></a>
 <a href="Portfolio.html"><button class="backbutton">← Back</button></a>
 <hr>
-<center><h2>Wildlife</h2></center>
+<center><h2>Portraits</h2></center>
 <div class="row">
 <!--1 --><div class="column">
-<img src="Images/" class="height"><br>
+<img src="Images/Portraits/_DSC1347.jpg" class="height"><br>
 </div>
-<!--2 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--2 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC2937.jpg" class="height"><br>
 </div>
-<!--3 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--3 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC2956.jpg" class="length"><br>
 </div>
-<!--4 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--4 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC3763 yes.jpg" class="height"><br>
 </div>
-<!--5 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--5 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC6951.jpg" class="height"><br>
 </div>
-<!--6 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--6 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC6997.jpg" class="height"><br>
 </div>
-<!--7 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--7 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC7007.jpg" class="height"><br>
 </div>
-<!--8 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--8 Portraits--><div class="column">
+<img src="Images/Portraits/_DSC8158.jpg" class="length"><br>
 </div>
-<!--9 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--9 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_1214.jpg" class="height"><br>
 </div>
-<!--10 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--10 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_1760.jpg" class="length"><br>
 </div>
-<!--11 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--11 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_1842.jpg" class="height"><br>
 </div>
-<!--12 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--12 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_3456.jpg" class="height"><br>
 </div>
-<!--13 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--13 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_3728-2.jpg" class="height"><br>
 </div>
-<!--14 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--14 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_4292.jpg" class="height"><br>
 </div>
-<!--15 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--15 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_4785.jpg" class="length"><br>
 </div>
-<!--16 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--16 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_4851.jpg" class="height"><br>
 </div>
-<!--17 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--17 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_4989.jpg" class="length"><br>
 </div>
-<!--18 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--18 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_4999.jpg" class="length"><br>
 </div>
-<!--19 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--19 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_5169.jpg" class="height"><br>
 </div>
-<!--20 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--20 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_5193.jpg" class="height"><br>
 </div>
-<!--21 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--21 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_6679.jpg" class="height"><br>
 </div>
-<!--22 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--22 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_7273.jpg" class="length"><br>
 </div>
-<!--23 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--23 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8109.jpg" class="height"><br>
 </div>
-<!--24 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--24 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8137.jpg" class="height"><br>
 </div>
-<!--25 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--25 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8158.jpg" class="height"><br>
 </div>
-<!--26 Wildlife--><div class="column">
-<img src="Images/" class="height"><br>
+<!--26 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8221.jpg" class="length"><br>
 </div>
-<!--27 Wildlife--><div class="column">
-<img src="Images/" class="length"><br>
+<!--27 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8563.jpg" class="height"><br>
 </div>
-<!--28 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0208.jpg" class="length"><br>
+<!--28 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8577.jpg" class="length"><br>
 </div>
-<!--29 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0419.jpg" class="length"><br>
+<!--29 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8630.jpg" class="height"><br>
 </div>
-<!--30 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_0448.jpg" class="height"><br>
+<!--30 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8663.jpg" class="height"><br>
 </div>
-<!--31 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_1039.jpg" class="height"><br>
+<!--31 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8719.jpg" class="height"><br>
 </div>
-<!--32 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_1415.jpg" class="length"><br>
+<!--32 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_8746.jpg" class="height"><br>
 </div>
-<!--33 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4404.jpg" class="length"><br>
+<!--33 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_9174.jpg" class="height"><br>
 </div>
-<!--34 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_4794.jpg" class="height"><br>
-</div>
-<!--35 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_5018.jpg" class="height"><br>
-</div>
-<!--36 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_5943.jpg" class="length"><br>
-</div>
-<!--37 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_6098.jpg" class="length"><br>
-</div>
-<!--38 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_6418.jpg" class="length"><br>
-</div>
-<!--39 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_6941.jpg" class="height"><br>
-</div>
-<!--40 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_6989.jpg" class="length"><br>
-</div>
-<!--41 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7009.jpg" class="length"><br>
-</div>
-<!--42 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7010.jpg" class="height"><br>
-</div>
-<!--43 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7572.jpg" class="length"><br>
-</div>
-<!--44 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_7684.jpg" class="length"><br>
-</div>
-<!--45 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_9049.jpg" class="length"><br>
-</div>
-<!--46 Wildlife--><div class="column">
-<img src="Images/Wildlife/DSC_9291.jpg" class="length"><br>
+<!--34 Portraits--><div class="column">
+<img src="Images/Portraits/DSC_9657.jpg" class="height"><br>
 </div>
 
 </div>
