--- a/Notes/Notes.html
+++ b/Notes/Notes.html
@@ -52,3 +52,7 @@
 <img src="Images/Landscape/FB_IMG_1619631804571.jpg" class="length"><br>
 <p>
 </div>
+
+
+<a href="Art Show.html"
+<img src=""><h2>Art Show</h2></a>
