--- a/Portfolio.html
+++ b/Portfolio.html
@@ -14,7 +14,9 @@ Creative Caputures by Claudia Griswold 2020-->
 <a href="index.html"><button class="backbutton">⌂ Home</button></a>
 <a href="index.html"><button class="backbutton">← Back</button></a>
 <hr>
+
 <center><h1>Portfolio</h1></center>
+<h2>*Important:Please Allow the photos some time to load.*</h2>
 <a href="Abstract.html"
 <img src=""><h2>Abstract</h2></a>
 
