--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@ Creative Caputures by Claudia Griswold 2020-->
 <span class="dot" onclick="currentSlide(5)"></span>
 </div>
 </div>
+<h2>*Important:Please Allow the photos some time to load.*</h2>
 </body>
 </html>
