--- a/Landscapes.html
+++ b/Landscapes.html
@@ -21,234 +21,140 @@ Creative Caputures by Cluadia Griswold 2020-->
 <center><h2>Landscapes</h2></center>
 <div class="row">
     
-<div class="column">
+<!--1 Landscapes--><div class="column">
 <img src="Images/Landscape/_DSC0193.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--2 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2706.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--3 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2718.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--4 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2767.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--5 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2851.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--6 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_3095-Pano-Pano.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--7 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_3294.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--8 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_4639-Pano.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--9 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_4674.nef.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--10 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_4717.nef.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--11 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_4749.nef.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--12 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_5148.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--13 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_5180.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--14 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_5656.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--15 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_5905.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--16 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_6039.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--17 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_6052.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--18 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_7029.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--19 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_8678.jpg" class="height"><br>
-
 </div>
-
-<div class="column">
+<!--20 Landscapes--><div class="column">
 <img src="Images/Landscape/FB_IMG_1615311765068.jpg" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/FB_IMG_1619441713070.jpg" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/FB_IMG_1634079701807.jpg" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/IMG_20210723_182052843.jpg" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/IMG_20220820_191347583.jpg" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="" class="height"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/_DSC1022.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_0015.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="https://lh3.googleusercontent.com/zYpY3RkbeOvSZsSRDST86neeI6OTjpHsVHBO87N7VEx-zN5g9GAif329BSHiUaufGrCl8ByoqBBW-fpOO6o41SzC2pkhCktMAAVbK4RRLQHwRPNH_imQZsepH-lMRvFg3YLAQpd6=w2400" class="lengthlandscape"><br>
-
 </div>
-
-<div class="column">
-<img src="https://lh3.googleusercontent.com/FK4mSmSpwjhqzXYa_TgeiRE0E7xTbBFg1Ignd6m1BZNzXFTJsEYNy3698AXPUOLHh_tIxWyw0m0cjhLYq-aZZtk3ITObnW--0cCUsjHSQYj6hg-xAaqE5ElYb-_-P52bNb9m2u65=w2400" class="lengthlandscape"><br>
-
-</div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_2709.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_2721.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_3045-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_3702-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_3725-Pano (2).jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_3803.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_4530-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_4626.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_4694.nef.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_4705.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_5571-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_5899-Pano 2.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_6041-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_6156-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_6217-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_8059-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
-
 <div class="column">
 <img src="Images/Landscape/DSC_8226-Pano.jpg" class="lengthlandscape"><br>
-
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_8289-Pano.jpg" class="lengthlandscape"><br>
