--- a/Landscapes.html
+++ b/Landscapes.html
@@ -25,19 +25,19 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/_DSC0193.jpg" class="height"><br>
 </div>
 <!--2 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_2706.jpg" class="height"><br>
+<img src="Images/Landscape/" class="height"><br>
 </div>
 <!--3 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_2718.jpg" class="height"><br>
+<img src="Images/Landscape/" class="height"><br>
 </div>
 <!--4 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2767.jpg" class="height"><br>
 </div>
 <!--5 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_2851.jpg" class="height"><br>
+<img src="Images/Landscape/" class="height"><br>
 </div>
 <!--6 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_3095-Pano-Pano.jpg" class="height"><br>
+<img src="Images/Landscape/" class="height"><br>
 </div>
 <!--7 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_3294.jpg" class="height"><br>
@@ -94,7 +94,7 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/IMG_20220820_191347583.jpg" class="height"><br>
 </div>
 <div class="column">
-<img src="" class="height"><br>
+<img src="Images/Landscape/" class="height"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/_DSC1022.jpg" class="lengthlandscape"><br>
