--- a/Landscapes.html
+++ b/Landscapes.html
@@ -25,28 +25,28 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/_DSC0193.jpg" class="height"><br>
 </div>
 <!--2 Landscapes--><div class="column">
-<img src="Images/Landscape/" class="height"><br>
+<img src="Images/Landscape/_DSC0123.jpg" class="height"><br>
 </div>
 <!--3 Landscapes--><div class="column">
-<img src="Images/Landscape/" class="height"><br>
+<img src="Images/Landscape/DSC_0300.jpg" class="height"><br>
 </div>
 <!--4 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_2767.jpg" class="height"><br>
 </div>
 <!--5 Landscapes--><div class="column">
-<img src="Images/Landscape/" class="height"><br>
+<img src="Images/Landscape/DSC_0700.jpg" class="height"><br>
 </div>
 <!--6 Landscapes--><div class="column">
-<img src="Images/Landscape/" class="height"><br>
+<img src="Images/Landscape/DSC_5656.jpg" class="height"><br>
 </div>
 <!--7 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_3294.jpg" class="height"><br>
 </div>
 <!--8 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_4639-Pano.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_5846.jpg" class="height"><br>
 </div>
 <!--9 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_4674.nef.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_5905.jpg" class="height"><br>
 </div>
 <!--10 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_4717.nef.jpg" class="height"><br>
@@ -55,10 +55,10 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/DSC_4749.nef.jpg" class="height"><br>
 </div>
 <!--12 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_5148.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_6052.jpg" class="height"><br>
 </div>
 <!--13 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_5180.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_7283.jpg" class="height"><br>
 </div>
 <!--14 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_5656.jpg" class="height"><br>
@@ -67,16 +67,16 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/DSC_5905.jpg" class="height"><br>
 </div>
 <!--16 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_6039.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_8815.jpg" class="height"><br>
 </div>
 <!--17 Landscapes--><div class="column">
 <img src="Images/Landscape/DSC_6052.jpg" class="height"><br>
 </div>
 <!--18 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_7029.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_8857.jpg" class="height"><br>
 </div>
 <!--19 Landscapes--><div class="column">
-<img src="Images/Landscape/DSC_8678.jpg" class="height"><br>
+<img src="Images/Landscape/DSC_9098.jpg" class="height"><br>
 </div>
 <!--20 Landscapes--><div class="column">
 <img src="Images/Landscape/FB_IMG_1615311765068.jpg" class="height"><br>
@@ -94,7 +94,7 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/IMG_20220820_191347583.jpg" class="height"><br>
 </div>
 <div class="column">
-<img src="Images/Landscape/" class="height"><br>
+<img src="Images/Landscape/DSC_9993.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/_DSC1022.jpg" class="lengthlandscape"><br>
@@ -105,8 +105,8 @@ Creative Caputures by Cluadia Griswold 2020-->
 <div class="column">
 <img src="https://lh3.googleusercontent.com/zYpY3RkbeOvSZsSRDST86neeI6OTjpHsVHBO87N7VEx-zN5g9GAif329BSHiUaufGrCl8ByoqBBW-fpOO6o41SzC2pkhCktMAAVbK4RRLQHwRPNH_imQZsepH-lMRvFg3YLAQpd6=w2400" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_2709.jpg" class="lengthlandscape"><br>
+<!--29 Landscapes--> <div class="column">
+<img src="Images/Landscape/DSC_0167.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_2721.jpg" class="lengthlandscape"><br>
@@ -117,8 +117,8 @@ Creative Caputures by Cluadia Griswold 2020-->
 <div class="column">
 <img src="Images/Landscape/DSC_3702-Pano.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_3725-Pano (2).jpg" class="lengthlandscape"><br>
+<!--33 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_0293.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_3803.jpg" class="lengthlandscape"><br>
@@ -133,10 +133,10 @@ Creative Caputures by Cluadia Griswold 2020-->
 <img src="Images/Landscape/DSC_4694.nef.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
-<img src="Images/Landscape/DSC_4705.jpg" class="lengthlandscape"><br>
+<img src="Images/Landscape/DSC_4704.jpg" class="height"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_5571-Pano.jpg" class="lengthlandscape"><br>
+<!--39 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_0313-Pano.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_5899-Pano 2.jpg" class="lengthlandscape"><br>
@@ -147,8 +147,8 @@ Creative Caputures by Cluadia Griswold 2020-->
 <div class="column">
 <img src="Images/Landscape/DSC_6156-Pano.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_6217-Pano.jpg" class="lengthlandscape"><br>
+<!--43 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_5243-Pano.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_8059-Pano.jpg" class="lengthlandscape"><br>
@@ -156,19 +156,19 @@ Creative Caputures by Cluadia Griswold 2020-->
 <div class="column">
 <img src="Images/Landscape/DSC_8226-Pano.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_8289-Pano.jpg" class="lengthlandscape"><br>
+<!--46 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_5679-2.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_9571-Pano.jpg" class="lengthlandscape"><br>
+<!--47 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_5822.jpg" class="lengthlandscape"><br>
 </div>
 <div class="column">
 <img src="Images/Landscape/DSC_9793.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
-<img src="Images/Landscape/DSC_9805-2.jpg" class="lengthlandscape"><br>
+<!--49 Landscapes--><div class="column">
+<img src="Images/Landscape/DSC_6041-Pano.jpg" class="lengthlandscape"><br>
 </div>
-<div class="column">
+<!--50 Landscapes--><div class="column">
 <img src="Images/Landscape/IMG_20210716_063304540_MP.jpg" class="lengthlandscape"><br>
 </div>
 
