--- a/Abstract.html
+++ b/Abstract.html
@@ -22,20 +22,20 @@ Creative Caputures by Cluadia Griswold 2020-->
 <div class="row">
 
 <!--1 Abstract--><div class="column">
-<img src="Images/Abstract/DSC_5291.jpg" class="height"><br>
+<img src="Images/Abstract/DSC_7008.jpg" class="height"><br>
 </div>
 <!--2 Abstract--><div class="column">
-<img src="Images/Abstract/DSC_6212.jpg" class="height"><br>
+<img src="Images/Abstract/DSC_7025.jpg" class="height"><br>
 </div>
 <!--3 Abstract--><div class="column">
-<img src="Images/Abstract/DSC_5829.jpg" class="length"><br>
+<img src="Images/Abstract/DSC_7029.jpg" class="length"><br>
 </div>
-
-
-
-
-
-
+<!--4 Abstract--><div class="column">
+<img src="Images/Abstract/DSC_7036.jpg" class="length"><br>
+</div>
+<!--5 Abstract--><div class="column">
+<img src="Images/Abstract/DSC_7050.jpg" class="length"><br>
+</div>
 </div>
 </body>
 </html>
